--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,73 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
+    font-size: 24px;
+    background-image: url("../images/connectwork.png")
 }
 
 h1{
-    font-size: 60px;
+    font-size: 65px;
 }
 .content-area {
     text-align: center;
     width: 85%;
     margin: 10px auto;
     padding: 10px 60px 30px 60px;
-    background-color:pink;
+    background-color: #0ff;
 }
+
+button {
+    display: inline-block;
+    border: none;
+    border-radius: 10px;
+    padding: 1rem 2rem;
+    text-decoration: none;
+    background: linear-gradient(45deg, #3385ff, #b366ff);
+    color: #ffffff;
+    font-family: sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+}
+
+button:hover,
+button:focus {
+    background: linear-gradient(45deg, #b366ff, #3385ff);
+    text-decoration: underline;
+}
+
+
+
  .hidden{
      display:none;
  }
 
+ .question {
+     font-size: 32px;
+ }
+
+ .answer-area {
+     line-height: 1.5;
+ }
+
  .answer-display:hover{
      cursor: pointer;
+     font-size: 26px;
      font-weight:bold;
+     text-decoration: underline;
+ }
+
+ .correct-result {
+    font-size:36px;
+    background-color: #7fff00;
+ }
+
+ .incorrect-result, .time-up {
+    font-size: 36px;
+    background-color: #f00;
+ }
+
+ .correct-answer {
+     font-size: 32px;
      text-decoration: underline;
  }
